[package]
name = "RustLearn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
serde_yaml = "0.9.21"
tokio = { version = "1.28.2", features = ["test-util","macros","rt-multi-thread"] }
#fontfinder = "1.5.0"
once_cell = "1.17.2"
syn = "2.0.18"
quote = "1.0.28"
serde = { version = "1.0.183", features = ["derive"] }
# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0.104"

static_assertions = "1.1.0"

[lib]
proc-macro = true